Options to control Kafka configuration

--- a/service/appsettings.json
+++ b/service/appsettings.json
@@ -4,5 +4,17 @@
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+
+  "Kafka": {
+    "GroupId": "users-consumer-group",
+    "BootstrapServers": "kafka-0.kafka.default.svc.cluster.local:9092,kafka-1.kafka.default.svc.cluster.local:9092,kafka-2.kafka.default.svc.cluster.local:9092",
+    "AutoOffsetReset": "Earliest",
+    "BatchSize": 10000000,
+    "LingerMs": 200,
+    "CompressionType": "Lz4",
+    "Acks": "All",
+    "ConsumerTopic": "users",
+    "ProducerTopic": "notification"
   }
 }
