--- a/service/service.csproj
+++ b/service/service.csproj
@@ -12,6 +12,8 @@
     <ItemGroup>
         <PackageReference Include="Confluent.Kafka" Version="2.1.0" />
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
+        <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
+        <PackageReference Include="Newtonsoft.Json.Schema" Version="3.0.15-beta2" />
     </ItemGroup>
 
     <ItemGroup>
