Added a basic database select to get student information

--- a/service/appsettings.json
+++ b/service/appsettings.json
@@ -6,6 +6,10 @@
     }
   },
 
+  "ConnectionStrings": {
+    "Default": "Server=mysql;User ID=root;Password=pass;Database=uqar"
+  },
+
   "Kafka": {
     "GroupId": "users-consumer-group",
     "BootstrapServers": "kafka-0.kafka.default.svc.cluster.local:9092,kafka-1.kafka.default.svc.cluster.local:9092,kafka-2.kafka.default.svc.cluster.local:9092",
