Added a cache system

--- a/service/appsettings.Development.json
+++ b/service/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.Hosting.Lifetime": "Information"
     }
+  },
+
+  "ConnectionStrings": {
+    "Default": "Server=mysql;User ID=root;Password=pass;Database=uqar"
   }
 }
