--- a/service/service.csproj
+++ b/service/service.csproj
@@ -11,6 +11,7 @@
 
     <ItemGroup>
         <PackageReference Include="Confluent.Kafka" Version="2.1.0" />
+        <PackageReference Include="Microsoft.Extensions.Caching.Memory" Version="8.0.0-preview.2.23128.3" />
         <PackageReference Include="Microsoft.Extensions.Hosting" Version="6.0.1" />
         <PackageReference Include="MySqlConnector" Version="2.3.0-beta.1" />
         <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
